
* GITHUB#12385: Restore parallel knn query rewrite across segments rather than slices (Luca Cavanna)

* GITHUB#12381: Speed up NumericDocValuesWriter with index sorting. (Chao Zhang)

Bug Fixes
---------------------

* GITHUB#9660: Throw and ArithmeticException when the offset overflows in a ByteBlockPool. (Stefan Vodita)

* GITHUB#12388: JoinUtil queries were ignoring boosts. (Alan Woodward)

Other
---------------------

* GITHUB#12404: Remove usage and add some legacy java.util classes to forbiddenapis (Stack, Hashtable, Vector).
  (Uwe Schindler)

* GITHUB#12410: Refactor vectorization support (split provider from implementation classes).
  (Uwe Schindler, Chris Hegarty)

======================== Lucene 9.7.0 =======================

API Changes
---------------------

* GITHUB#11840, GITHUB#12304: Query rewrite now takes an IndexSearcher instead of
  IndexReader to enable concurrent rewriting. Please note: This is implemented in
  a backwards compatible way. A query overriding any of both rewrite methods is
  supported. To implement this backwards layer in Lucene 9.x the
  RuntimePermission "accessDeclaredMembers" is needed in applications using
  SecurityManager.  (Patrick Zhai, Ben Trent, Uwe Schindler)

* GITHUB#12321: DaciukMihovAutomatonBuilder has been marked deprecated in preparation of reducing its visibility in
  a future release. (Greg Miller)

* GITHUB#12268: Add BitSet.clear() without parameters for clearing the entire set
  (Jonathan Ellis)

* GITHUB#12346: add new IndexWriter#updateDocuments(Query, Iterable<Document>) API
  to update documents atomically, with respect to refresh and commit using a query. (Patrick Zhai)

New Features
---------------------

* GITHUB#12257: Create OnHeapHnswGraphSearcher to let OnHeapHnswGraph to be searched in a thread-safety manner. (Patrick Zhai)

* GITHUB#12302, GITHUB#12311, GITHUB#12363: Add vectorized implementations of VectorUtil.dotProduct(),